# IPAgentCreator

./: .gitignore  PLAN_IP_DIGITAL_TWIN_FACTORY.md  README.md  extract_raw.py  pyproject.toml  知识原子化批量萃取指令.md
01_NLP_Archive/: NLP_Protocol.md  README.md  knowledge_factory.py
01_NLP_Archive/documents/: 李中莹 爱上双人舞.docx  李中莹北京NLP第33届讲义.docx  李中莹十二天NLP及格执行师文凭班讲义.docx
01_NLP_Archive/output_kb/: NLP精义_Atomic.md  亲子关系技巧_Atomic.md  感知位置法_Atomic.md  李中莹IP数字化人格实操手册.md  李中莹NLP执行师10万字笔记_Atomic.md
01_NLP_Archive/raw_text/: [简快身心积极疗法（上）].李中莹.扫描版.pdf.txt  《NLP简快心理疗法》(李中莹).pdf.txt  《李中莹NLP精义》（李中莹）.pdf.txt  亲子关系全面技巧-李中莹.pdf.txt  李中莹-第40届十二天NLP及格执行师文凭班讲义.pdf.txt  李中莹北京NLP第33届讲义.docx.txt  李中莹：感知位置法（心之旅）.pdf.txt
02_Universal_IP_Platform/: README.md  cleaner.py  config_generator.py  extractor.py  factory_core.py  ip_config_template.yaml  persona_gen.py  protocol_gen.py  start_factory.py
03_Parenting_Simulator/: PLAN_PARENTING_SIMULATOR_PLATFORM.md
documents/: 李中莹NLP执行师10万字笔记.docx  李中莹《NLP企业心智模式课程》.docx  重塑心灵-李中莹.txt
output_kb/: MASTER_INDEX.md  执行师笔记精要_Atomic.md  李中莹IP数字化人格实操手册.md  李中莹十二天NLP及格执行师文凭班讲义_Atomic.md  重塑心灵_Atomic.md
raw_text/: [简快身心积极疗法（下）]..pdf.txt  【独家首发】[婚恋篇-爱上双人舞-如何拥有和谐的恋爱.婚姻生活-（第2版）.pdf.txt  【独家首发】李中莹NLP参考资料修订版140页.pdf.txt  【独家首发】李中莹NLP执行师10万字笔记.pdf.txt  李中莹 爱上双人舞.docx.txt  李中莹NLP执行师10万字笔记.docx.txt  李中莹《NLP企业心智模式课程》.docx.txt  李中莹十二天NLP及格执行师文凭班讲义.docx.txt  重塑心灵-李中莹.txt.txt
src/notebooklm/: __init__.py
