[project]
name = "notebooklm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "injanb003", email = "injanb003@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
